[update]レイアウト調整管理者

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,9 @@
  background-color: #FFFF66;
 }
 
-.sign_up_back {
- background-image: image-url(".jpg");
+.top-image {
+ background-image: image-url("foundly1.jpg");
+ height: 800px;
+ background-repeat: no-repeat;
+ background-size: cover;
 }
