--- a/app/views/admins/contacts/edit.html.erb
+++ b/app/views/admins/contacts/edit.html.erb
@@ -1,14 +1,39 @@
-<h2>お問い合わせ内容</h2>
-    <%= form_with model: @contact, url: admins_contact_path, method: :patch, local:true do |f| %>
-        <h3>顧客名</h3>
-        <%= @contact.member.nickname %>さん
-        <h3>問い合わせ日</h3>
-        <%= @contact.created_at.strftime("%Y年%m月%d日 ") %>
-        <h3>タイトル</h3>
-        <%= @contact.title %>
-        <h3>問い合わせ内容</h3>
-        <%= @contact.body %>
-        <h3>返信</h3>
-        <%= f.text_area :reply, class:"form-control", placeholder: "返信内容" %>
-        <%= f.submit "送信" %>
-    <% end %>
+<div class="container mt-3">
+  <div class="row">
+    <h4 class="my-5">返信フォーム</h4>
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th>ユーザー名</th>
+          <th>メールアドレス</th>
+          <th>問い合わせタイトル</th>
+          <th>受信日</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= @contact.member.nickname %></td>
+          <td><%= @contact.member.email %></td>
+          <td><%= @contact.title %></td>
+          <td><%= @contact.created_at.strftime("%Y年%m月%d日 ") %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="row border-bottom">
+  <%= form_with model: @contact, url: admins_contact_path, method: :patch, local:true do |f| %>
+    <div class="h5">問い合わせ内容</div>
+    <div><%= safe_join(@contact.body.split("\n"),tag(:br)) unless @contact.body.nil? %></div>
+  </div>
+  
+  <div class="row mt-3">
+    <%= f.label :返信 ,class:"h5"%>
+    <%= f.text_area :reply, rows:"5", class:"form-control", placeholder: "返信内容" %>
+  </div>
+  <div class="row mt-3 mb-3">
+    <%= f.submit "返信",class:"btn btn-outline-dark btn-bolck" %>
+    <% end %>  
+  </div>
+</div>  
+
+    
