--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,11 +1,10 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
-    <div class="col">
-      <h3 class="my-5 under">会員一覧</h3>
+      <h4 class="my-5 under">会員一覧</h4>
 
-      <table class="table">
+      <table class="table table-hover table-inverse">
         <thead>
-          <tr class="table-active">
+          <tr>
             <th>会員ID</th>
             <th>氏名</th>
             <th>メールアドレス</th>
@@ -30,6 +29,5 @@
         <% end %>
       </table>
       <%= paginate(@members) %>
-    </div>
   </div>
 </div>
