--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -1,25 +1,19 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5 under"><%= @member.nickname %>さんの会員詳細</h3>
+      <h4 class="my-5"><%= @member.nickname %>さんの会員詳細</h4>
         <div class="row">
           <div class="offset-1 col-3 mb-3">会員ID</div>
           <div class="col-8"><%= @member.id %></div>
 
-          <!--<div class="offset-1 col-3 mb-3">氏名</div>-->
-          <!--<div class="col-8"><%#= @member.full_name %></div>-->
-
-          <!--<div class="offset-1 col-3 mb-3 ">フリガナ</div>-->
-          <!--<div class="col-8 "><%#= @member.full_name_kana %></div>-->
-          
           <div class="offset-1 col-3 mb-3">写真</div>
           <div class="col-8"><%= attachment_image_tag @member, :image,fallback: "noimage.jpg",size:"50x50" ,class:"rounded-circle border border-dark"%></div>
-          
+
           <div class="offset-1 col-3 mb-3">ユーザー名</div>
           <div class="col-8"><%= @member.nickname %></div>
 
           <div class="offset-1 col-3 mb-3">性別</div>
-          <div class="col-8"><%= @member.sex %></div>
+          <div class="col-8"><%= @member.sex_i18n %></div>
 
           <div class="offset-1 col-3 mb-3 ">メールアドレス</div>
           <div class="col-8"><%= @member.email %></div>
