--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,24 +1,30 @@
+<% if member_signed_in? %>
 <span>
   <%= link_to image_tag("logo.jpg", size: "150x150"), root_path %>
 </span>
 <nav class="nav flex-colmun">
-  <li class="nav-item dropdown">
-    <div class="nav-link dropdown-tggle" data-toggle="dropdown">投稿</div>
-      <div class="dropdown-menu">
-        <%= link_to "新規投稿作成",new_request_path, class: 'dropdown-item text-dark' %>
-        <%= link_to "投稿一覧",requests_path, class: 'dropdown-item  text-dark' %>
-        <%= link_to "取引一覧",rooms_path, class: 'dropdown-item  text-dark' %>
-      </div>
-  </li>
-  <li>  </li>
+  <!--<li class="nav-item dropdown">-->
+  <!--  <div class="nav-link dropdown-tggle" data-toggle="dropdown">投稿</div>-->
+  <!--    <div class="dropdown-menu">-->
+  <!--      <%= link_to "新規投稿作成",new_request_path, class: 'dropdown-item text-dark' %>-->
+  <!--      <%= link_to "投稿一覧",requests_path, class: 'dropdown-item  text-dark' %>-->
+  <!--      <%= link_to "取引一覧",rooms_path, class: 'dropdown-item  text-dark' %>-->
+  <!--    </div>-->
+  <!--</li>-->
   <li class="nav-item">
-    <%= link_to "TOP",root_path, class: 'nav-link text-dark' %>
-  </li>
-  <li class="nav-item">
-    <%= link_to "About",about_path, class: 'nav-link text-dark' %>
+    <%= link_to "新規投稿作成",new_request_path, class: 'nav-link text-dark' %>
   </li>
   <li class="nav-item">
-    <%= link_to "Contact",new_contact_path, class: 'nav-link text-dark' %>
+    <%= link_to "投稿一覧",requests_path, class: 'nav-link text-dark' %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "取引一覧",rooms_path, class: 'nav-link text-dark' %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "シェアホビとは？",about_path, class: 'nav-link text-dark' %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "問い合わせ",new_contact_path, class: 'nav-link text-dark' %>
   </li>
 </nav>
 
@@ -27,12 +33,4 @@
 <i class="fab fa-instagram fa-lg mx-auto"></i>
 <i class="fab fa-facebook-square fa-lg mx-auto"></i>
 </div>
-    <!--<li class="nav-link">-->
-    <!--  <%= link_to "新規投稿作成",new_request_path, class: 'nav-link text-dark' %>-->
-    <!--</li>-->
-    <!--<li class="nav-link">-->
-    <!--  <%= link_to "投稿一覧",requests_path, class: 'nav-link text-dark' %>-->
-    <!--</li>-->
-    <!--<li class="nav-link">-->
-    <!--  <%= link_to "取引一覧",rooms_path, class: 'nav-link text-dark' %>-->
-    <!--</li>-->
+<% end %>
