--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+  <% unless current_page?(root_path) %>
     <header class="header">
       <%= render 'layouts/header' %>
     </header>
@@ -32,5 +33,8 @@
     <footer class="footer">
       <%= render 'layouts/footer' %>
     </footer>
+  <% else %>
+     <%= yield %> 
+  <% end %> 
   </boby>
 </html>
