--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -1,10 +1,7 @@
-<div class="container">
-  <div class="top-visual">
-    <div class="row">
-      「趣味」で人生をもっと楽しく
-      <%= link_to "新規アカウント作成",new_member_registration_path, class: 'btn btn-danger' %>
-      <%= link_to "ログイン", new_member_session_path, class: 'btn btn-danger' %>
-      <%= link_to "管理者ログイン",admin_session_path, class: 'nav-link text-danger' %>
-    </div>
-  </div>
+<div class="top-image">
+  「趣味」で人生をもっと楽しく
+  <%= link_to "新規アカウント作成",new_member_registration_path, class: 'btn btn-danger' %>
+  <%= link_to "ログイン", new_member_session_path, class: 'btn btn-danger' %>
+  <%= link_to "管理者ログイン",admin_session_path, class: 'nav-link text-danger' %>
 </div>
+
