--- a/app/views/members/requests/show.html.erb
+++ b/app/views/members/requests/show.html.erb
@@ -13,7 +13,7 @@
           <tbody>
            <tr>
              <th><%= "予定日 " %></th>
-             <th><%= @request.schedule %></th>
+             <th><%= @request.schedule.strftime("%Y年%m月%d日 ") %></th>
            </tr>
            <tr>
              <th><%= "場所" %></th>
