--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg" style="background-color:#FFFF66;" >
+<div class="container pt-2 ">
+  <h4 class="text-center">sharehobby</h4>
+</div>
+<nav class="navbar navbar-expand-lg border-top border-bottom border-dark"  >
   <div class="container">
-    <span>
-      <%= render 'layouts/search' %>
-    </span>
     <div class="row justify-content-center">
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="nav navbar-nav">
@@ -15,9 +15,6 @@
           </li>
           <li class="nav-item active">
             <%= link_to "管理者ログアウト",destroy_admin_session_path,method: :delete, class: 'nav-link text-danger' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "管理者ログイン",admin_session_path, class: 'nav-link text-danger' %>
           </li>
         <% elsif member_signed_in? %>
           <li class="nav-item">
@@ -39,15 +36,22 @@
             <% end %>
           </li>
         <% else %>
+          <% unless current_page?(admin_session_path) %>
           <li class="nav-item">
             <%= link_to "新規登録", new_member_registration_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item">
             <%= link_to "ログイン", new_member_session_path, class: 'nav-link text-dark' %>
           </li>
+          <% end %>
         <% end %>
         </ul>
       </div>
     </div>
+    <% if member_signed_in? %>
+    <span>
+      <%= render 'layouts/search' %>
+    </span>
+    <% end %>
   </div>
 </nav>
