--- a/app/views/members/rooms/show.html.erb
+++ b/app/views/members/rooms/show.html.erb
@@ -27,7 +27,7 @@
          <%= safe_join(c.body.split("\n"),tag(:br)) unless c.body.nil? %> 
         </div>
         <div class="col-7 border-bottom"><%= c.created_at.strftime("%Y/%m/%d %H:%M")%>
-          <i class="fas fa-trash" style="color: black;"></i>
+          <!--<i class="fas fa-trash" style="color: black;"></i>-->
         </div>
       </div>
     </div>
