--- a/app/views/admins/contacts/edit.html.erb
+++ b/app/views/admins/contacts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container">
   <div class="row">
     <h4 class="my-5">返信フォーム</h4>
     <table class="table table-hover table-inverse">
