--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container mt-3">
+<div class="container">
   <div class="row">
-      <h4 class="my-5 under">問い合わせ一覧</h4>
+      <h4 class="my-3">問い合わせ一覧</h4>
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
@@ -13,18 +13,17 @@
         </tr>
       </thead>
       <tbody>
-        <% @members.each do |member| %>
-        <% member.contacts.each do |contact| %>
+        <% @contacts.each do |contact| %>
         <tr>
           <td><%= contact.member.nickname %></td>
           <td><%= contact.member.email %></td>
           <td><%= contact.title %></td>
-          <td><%= contact.created_at.strftime("%Y年%m月%d日 ") %></td>
+          <td><%= contact.created_at.strftime("%Y年%m月%d日") %></td>
           <td><%= link_to "返信", edit_admins_contact_path(contact) %></td>
         </tr>
         <% end %>
-        <% end %>
       </tbody>
     </table>
-  </div>  
+  </div>
+  <div class="row  mt-3 mb-3 justify-content-center"> <%= paginate @contacts %></div>
 </div>  
