--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container mt-3">
+<div class="container ">
   <div class="row">
-      <h4 class="my-5 under">会員一覧</h4>
+      <h4 class="my-3">会員一覧</h4>
 
       <table class="table table-hover table-inverse">
         <thead>
@@ -28,6 +28,6 @@
         </tbody>
         <% end %>
       </table>
-      <%= paginate(@members) %>
   </div>
+  <div class="row  mt-3 mb-3 justify-content-center"> <%= paginate @members %></div>
 </div>
