--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -28,9 +28,9 @@
           </div>
         </div>
 
-      <div class="offset-4 col-8 mt-3">
+      <div class="offset-1 col-8 mt-3">
       <%= link_to "編集する",edit_admins_member_path(@member),class:"btn btn-outline-dark mr-5" %>
-      <%= link_to "リクエスト一覧",admins_requests_path ,class:"btn btn-outline-dark mr-5" %>
+      <%#= link_to "リクエスト一覧",admins_requests_path ,class:"btn btn-outline-dark mr-5" %>
       </div>
 
     </div>
