--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row ">
-    <div>株式会社</div>
+<div class="container mt-3 pt-3 mb-3">
+  <div class="row justify-content-end">
+    <small>© 2021- Sharehobby Inc. All Rights Reserved.</small>
   </div>
 </div>
