--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,23 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  
+  <% if current_page?(root_path) %>
   <body>
-  <% unless current_page?(root_path) %>
+    <%= yield %>
+  </body>
+  <% else %>
+  <body>
     <header class="header">
       <%= render 'layouts/header' %>
     </header>
-  
 
     <main class="main">
       <div class="container" >
@@ -24,7 +31,13 @@
           </div>
           <div class="offset-1 mt-3"></div>
           <div class="col-8 mt-3">
-             <%= yield %> 
+            <div class="text-dark">
+              <%= flash[:success] %>
+            </div>
+            <div class="text-danger">
+              <%= flash[:error] %>
+            </div>
+             <%= yield %>
           </div>
         </div>
       </div>
@@ -33,8 +46,6 @@
     <footer class="footer">
       <%= render 'layouts/footer' %>
     </footer>
-  <% else %>
-     <%= yield %> 
-  <% end %> 
   </boby>
+  <% end %>
 </html>
