--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -1,7 +1,13 @@
 <div class="top-image">
-  「趣味」で人生をもっと楽しく
-  <%= link_to "新規アカウント作成",new_member_registration_path, class: 'btn btn-danger' %>
-  <%= link_to "ログイン", new_member_session_path, class: 'btn btn-danger' %>
-  <%= link_to "管理者ログイン",admin_session_path, class: 'nav-link text-danger' %>
+  <div class="container">
+    <div class="row justify-content-end pt-5" >
+       <%= link_to "ログイン", new_member_session_path, class: 'btn btn-outline-dark' %>
+    </div>
+    <div class="row justify-content-center" style="padding-top: 150px;">
+      <div class="display-2">Sharehobby</div>
+    </div>
+    <div class="row justify-content-center" style="padding-top: 30px;">
+      <span><%= link_to "アカウント作成",new_member_registration_path, class: "btn btn-lg btn-outline-danger"%></span>
+    </div>  
+  </div>
 </div>
-
