--- a/app/views/members/members/unsubscribe.html.erb
+++ b/app/views/members/members/unsubscribe.html.erb
@@ -3,19 +3,12 @@
   <div class="row mt-5">
    <h3 class="mx-auto "><strong>本当に退会しますか？</strong></h3>
   </div>
-
   <div class="row mt-4 ">
-   <h5 class="mx-auto font-weight-normal text-center">退会すると、会員登録情報や<br>
-      これまでの購入履歴が閲覧できなくなります。<br>
-      退会する場合は、「退会する」をクリックしてください。<br>
-   </h5>
+   <h5 class="mx-auto font-weight-normal text-center">退会すると、再度ログインすることができなくなります。 </h5>
   </div>
-
   <div class="row mt-4 mr-4 ">
-    
    <div class="mx-auto"><%= link_to "退会しない",member_path(current_member) ,class:"btn btn-outline-dark font-weight-bold mx-5 px-4"%>
     <%= link_to "退会する", withdraw_path ,method: :PATCH,"data-confirm" => "本当に退会しますか？", class:"btn btn-outline-danger font-weight-bold px-4"%>
-
    </div>
   </div>
 </div>
