--- a/app/views/members/requests/new.html.erb
+++ b/app/views/members/requests/new.html.erb
@@ -1,12 +1,13 @@
 <%= form_with model:@request,local:true do |f| %>
 <div class="container">
-  <div class="row mt-5 mb-3">
+  <%= render 'members/requests/error', request: @request %>
+  <div class="row mt-3 mb-3">
     <div class="col-2">
      <h5>投稿作成</h5>
     </div> 
     <div class="offset-7"></div>
     <div class="col-3 justify-content-end">
-       <input type="submit" value="&#xf064; 投稿" class="fas fa-share　btn btn-lg btn-warning  btn-block">
+       <input type="submit" value="&#xf064; 投稿" class="fas fa-share btn btn-lg btn-outline-dark btn-block" >
     </div>
   </div>
 
