--- a/app/views/members/requests/show.html.erb
+++ b/app/views/members/requests/show.html.erb
@@ -1,8 +1,8 @@
-<% en = Entry.find_by(member_id: current_member.id, request_id: params[:id]) %>
+<%# en = Entry.find_by(member_id: current_member.id, request_id: params[:id]) %>
 <div class="container">
   <div class="card mt-5">
     <!--<div class="row mt-3">-->
-      <div class="card-header bg-dark text-white ">
+      <div class="card-header">
         <div class="h3"><%= @request.title %></div>
         <div id="like-btn_<%= @request.id %>" class="text-right">
           <%= render 'members/likes/like-btn', request: @request %>
@@ -13,7 +13,7 @@
           <tbody>
            <tr>
              <th><%= "予定日 " %></th>
-             <th><%= @request.schedule.strftime("%Y年%m月%d日 ") %></th>
+             <th><%= @request.schedule.strftime("%Y年%m月%d日") %></th>
            </tr>
            <tr>
              <th><%= "場所" %></th>
@@ -27,22 +27,25 @@
              <th><%= "ステータス 最後に消す！" %></th>
              <th><%= @request.is_active_i18n %></th>
            </tr>
+           <tr>
+             <th><%= "タグ" %></th>
+             <th><%= render_with_tags(@request.caption) %></th>
+           </tr>
           </tbody>
         </table>
       <div class="card-footer bg-transparent">
-        <div class="h5 text-black"><%= render_with_tags(@request.caption) %></div>
         <div class="text-right">
         <% if @request.member_id == current_member.id %>
-          <%= link_to "リクエスト編集",edit_request_path(@request) ,class:"btn btn-outline-dark" %>
-          <%= link_to "リクエスト削除",request_path(@request), class:"btn btn-outline-dark",method: :delete,"data-confirm" => "本当に削除しますか？" %>
+          <%= link_to "投稿編集",edit_request_path(@request) ,class:"btn btn-outline-dark" %>
+          <%= link_to "投稿削除",request_path(@request), class:"btn btn-outline-dark",method: :delete,"data-confirm" => "本当に削除しますか？" %>
         <% else %>
           <% if @request.is_active == "release" %>
             <%= form_with model: @request,url: request_is_active_release_path(@request),method: :patch,local:true do |f| %>
-              <%= f.submit "リクエスト受諾",class:"btn btn-outline-dark", "data-confirm" => "取引を開始しますか？" %>
+              <%= f.submit "取引を始める",class:"btn btn-outline-dark", "data-confirm" => "取引を開始しますか？" %>
             <% end %>
-          <% elsif @request.is_active == "in_transaction" %>
-            <%= link_to "取引画面へ", room_path(en.room_id) ,class:"btn btn-outline-dark" %>
-          <% else %>
+          <%# elsif @request.is_active == "in_transaction" %>
+            <%#= link_to "取引画面へ", room_path(en.room_id) ,class:"btn btn-outline-dark" %>
+          <%# else %>
             <div></div>
           <% end %>
         <% end %>
