--- a/app/views/members/requests/tagshow.html.erb
+++ b/app/views/members/requests/tagshow.html.erb
@@ -1,41 +1,38 @@
 <div class="container">
-<div class="row">
-   <div class= "col-xs-12 col-lg-12 col-md-12 col-sm-12">
-     <div>
-       <% @tags.sort.reverse.each do |count| %>
-         <% count[1].each do |tag| %>
-           <p><%= link_to  "##{tag.name} (#{tag.requests.count}) ","/requests/tagshow/#{tag.name}" %></p>
-         <% end %>
-       <% end %>
-     </div>
-   </div>
-</div>
-</div>
-
-<h2>ハッシュタグ #<%= @tag.name %></h2>
- <div class="container">
-  <div class="row mt-3">
-    <% @requests.each do |req| %>
-
-    <div class="col-4 mt-3">
-      <div class="card " style="min-width: 15rem;">
-        <div class="card-header"><%= req.title %></div>
-        <div class="card-body">
-          <div><%= req.schedule %></div>
-          <div><%= req.location %></div>
-          <div><%= req.is_active %></div>
-          <div class="text-right"><%= link_to "詳細を見る",request_path(req),class:"btn btn-outline-dark" %></div>
+　<div class="row">
+    <h4> #<%= @tag.name %></h4>
+  </div>
+  <div class="row">
+  <% @requests.each do |req| %>
+    <div class="col-6 mt-3">
+      <div class="card " style="width: 20rem;">
+        <div class="card-body text-center ">
+          <div><%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"35x35" ,class:"rounded-circle border border-dark"%></div>
+          <div class="border-bottom"><%= link_to req.member.nickname, member_path(req.member) ,class:"text-dark" %></div>
+          <table class="table table-borderless">
+            <tbody>
+              <tr>
+                <th><%= "タイトル " %></th>
+                <th><%= req.title.truncate(15) %></th>
+              </tr>
+              <tr>
+                <th><%= "予定日" %></th>
+                <th><%= req.schedule.strftime("%Y年%m月%d日 ")  %></th>
+              </tr>
+              <tr>
+                <th><%= "場所" %></th>
+                <th><%= req.location.truncate(15) %></th>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="card-footer">
-          <div>
-            <%= link_to member_path(req.member.id) do %>
-            <%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"35x35" ,class:"rounded-circle border border-dark"%>
-            <%= req.member.nickname %>
-            <% end %>
-          </div>
+          <%= link_to "詳細を見る",request_path(req),class:"btn btn-outline-dark btn-block" %>
         </div>
       </div>
     </div>
     <% end %>
-
   </div>
+  <div class="row mt-3 mb-3 justify-content-center"> <%= paginate @requests %></div>
+</div>
+
