--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -15,7 +15,7 @@
         </div>
       </div>
     <div class="card-body">
-      <h4 class="ml-3"><%= @member.nickname %> : <%= @member.sex_i18n %></h4>
+      <div class="h4"><%= @member.nickname %><small class=="ml-2">（<%= @member.sex_i18n %>・<%= @member.age %>歳）</small></div>
       <table class="table">
         <tbody>
            <tr>
