--- a/app/views/members/shared/_error_messages.html.erb
+++ b/app/views/members/shared/_error_messages.html.erb
@@ -1,15 +1,26 @@
-<% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
+<!--<%# if resource.errors.any? %>-->
+<!--  <div id="error_explanation">-->
+<!--    <h2>-->
+<!--      <%#= I18n.t("errors.messages.not_saved",-->
+<!--                 count: resource.errors.count,-->
+<!--                 resource: resource.class.model_name.human.downcase)-->
+<!--       %>-->
+<!--    </h2>-->
+<!--    <ul>-->
+<!--      <%# resource.errors.full_messages.each do |message| %>-->
+<!--        <li><%#= message %></li>-->
+<!--      <%# end %>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--<%# end %>-->
+
+<div class="row mt-3">
+  <ul class="error-style">
+    <% if @member.errors.any? %>
+     <h3><strong class="text-danger"><%= @member.errors.count %>件のエラーが発生しました</strong></h3>
+      <% @member.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
-    </ul>
-  </div>
-<% end %>
+    <% end %>
+  </ul>
+</div>
