--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,11 @@
 <div class="container pt-2 ">
-  <h4 class="text-center">sharehobby</h4>
+  <% unless member_signed_in? %>  
+    <h4 class="text-center"><%= link_to "sharehobby",root_path ,class:"text-dark"%></h4>
+  <% else %>
+    <h4 class="text-center"><%= link_to "sharehobby",member_path(current_member) ,class:"text-dark"%></h4>
+  <% end %>  
 </div>
+
 <% unless current_page?(member_session_path) %>
 <% unless current_page?(new_member_registration_path) %>
 <nav class="navbar navbar-expand-lg border-top border-bottom border-dark"  >
