--- a/app/views/members/rooms/show.html.erb
+++ b/app/views/members/rooms/show.html.erb
@@ -1,14 +1,42 @@
 <div class="container mt-5 ">
   <% @entries.each do |e| %>
-  <div class="row mt-3">
+  <div class="row ">
     <% if e.member_id != current_member.id %>
       <div><%= attachment_image_tag e.member,:image, fallback: "noimage.jpg",size:"40x40" ,class:"rounded-circle border border-dark" %></div>
       <div><%= link_to e.member.nickname, member_path(e.member), class:"text-dark " %>さん</div>
     <% end %>
   </div>
   <% end %>
+  <div class="row mt-4">
+   <!--投稿者且つ取引中-->
+    <% if @room.request.member_id == current_member.id  && @room.request.is_active == "in_transaction" %>
+      <div class="col-12"><%= link_to "依頼を完了し評価を始める", request_is_active_in_review_path(@room.request), method: :patch ,class:"btn btn-block btn-outline-dark" ,"data-confirm" => "依頼は完了していますか？"  %></div>
+      <small class="col-12">依頼が完了したら評価を開始してください</small>
+    <!--購入者且つ取引中-->
+    <% elsif @room.request.member_id != current_member.id && @room.request.is_active == "in_transaction" %>
+      <button type="button" class="btn btn-outline-dark btn-block" disabled>評価画面へ</button>
+      <small class="col-12">※投稿者が評価を開始したら評価ができるようになります</small>
+    <% else %>
+      <div></div>
+    <% end %>
+  </div>
+  <!--評価ページ変移ボタン-->
+   <div class="row mt-1">
+    <% if @room.request.is_active == "in_review" %>
+      <% if @rate.present? %>
+        <% if @room.request.is_active == "in_review" && @rate.member_id == current_member.id  %>
+          <h5>評価は完了しています。相手の評価をお待ちください。</h5>
+        <% else %>  
+          <h5 class=text-danger>相手は評価を完了しています！！</h5>
+          <div class="col-12"><%= link_to "評価画面へ", new_request_rate_path(@room.request) ,class:"btn btn-outline-danger btn-block" %></div>
+        <% end %>
+      <% else %> 
+        <div class="col-12"><%= link_to "評価画面へ", new_request_rate_path(@room.request) ,class:"btn btn-outline-dark btn-block" %></div>
+      <% end %>
+    <% end %>  
+  </div>
    <hr>
-</div>
+<% if @room.request.is_active != "end_transaction" %>  
 <div class="container  pl-5">
   <% if @chats.present? %>
     <% @chats.each do |c| %>
@@ -24,7 +52,7 @@
     <div class="row mt-1 justify-content-end">
       <div class="col-7 text-right">
         <div class="text-left">
-         <%= safe_join(c.body.split("\n"),tag(:br)) unless c.body.nil? %> 
+         <%= safe_join(c.body.split("\n"),tag(:br)) unless c.body.nil? %>
         </div>
         <div class="col-7 border-bottom"><%= c.created_at.strftime("%Y/%m/%d %H:%M")%>
           <!--<i class="fas fa-trash" style="color: black;"></i>-->
@@ -36,8 +64,8 @@
   <% else %>
     <div class="row mt-1 justify-content-center">
       <div class="col-7">
-        <h5>さっそくやりとりを始めましょう!</h5>
-      </div>  
+        <h6>さっそくメッセージを送ってみましょう!</h6>
+      </div>
     </div>
   <% end %>
 </div>
@@ -54,3 +82,13 @@
     </div>
   </div>
 </div>
+<% else %>
+<div class="container  pl-5">
+  <div class="row">
+    <h6>評価が終了し取引が完了しました。もっといろんな趣味を見つけてみませんか。</h6>
+    <div class="border-dark border-bottom text-center"><%= link_to "趣味を楽しむ",requests_path, class:"text-dark " %>
+      <i class="fas fa-search fa-lg"></i>
+    </div>
+  </div>
+</div>  
+<% end %>  
