--- a/app/views/members/rates/new.html.erb
+++ b/app/views/members/rates/new.html.erb
@@ -1,12 +1,23 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
-    
+    <%# binding.pry %>
+    <div class="h4"><%= @member %>さんとの取引評価</div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-10">
+      <%= form_with model:[@request, @rate], local:true do |f| %>
+        <div class="form-group ">
+          <%= f.label :評価 %>
+          <%= f.select :rate_choice,[['Good',0],['Bad',1]], { include_blank: true, selected: 0}, class:"form-control" %>
+        </div>
+        <div class="form-group">  
+          <%= f.label :コメント %>
+          <%= f.text_area :rate_comment ,rows:"5", class:"form-control"%>
+        </div>
+        <div class="form-group">
+          <%= f.submit "送信",class:"btn btn-outline-dark btn-bolck" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
-
-<h1>1111</h1>
-<%= form_with model:[@request, @rate], local:true do |f| %>
-  <%= f.select :rate_choice,[['Good',0],['Bad',1]], { include_blank: true, selected: 0} %>
-  <%= f.text_area :rate_comment %>
-  <%= f.submit "送信" %>
-<% end %>
