[fix]評価一覧/ルーム詳細

--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -7,7 +7,7 @@
       <div class="display-2">Sharehobby</div>
     </div>
     <div class="row justify-content-center" style="padding-top: 30px;">
-      <span><%= link_to "アカウント作成",new_member_registration_path, class: "btn btn-lg btn-outline-danger"%></span>
-    </div>  
+      <span><%= link_to "アカウント作成",new_member_registration_path, class: "btn btn-lg btn-outline-danger", 'data-turbolinks': false %></span>
+    </div>
   </div>
 </div>
