--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,7 +54,7 @@
         <% else %>
           <% unless current_page?(admin_session_path) %>
           <li class="nav-item">
-            <%= link_to "新規登録", new_member_registration_path, class: 'nav-link text-dark' %>
+            <%= link_to "新規登録", new_member_registration_path, class: 'nav-link text-dark', 'data-turbolinks': false %>
           </li>
           <li class="nav-item">
             <%= link_to "ログイン", new_member_session_path, class: 'nav-link text-dark' %>
